@@ -1,3 +1,10 @@
+Thu Aug  4 19:54:30 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>
+
+        * etc/scripts/generate_autobuild_properties.py:
+
+          Updated script to generate a environment variables
+          property file.
+
 Wed Aug  3 16:32:52 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>
 
         * CUTS_Runtime_Arch.mwc:
